--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   timer_count_down: ^2.2.2
   random_string: ^2.3.1
   flutter_svg: ^1.0.0
+  firedart: ^0.9.0+1
+  slide_countdown: ^0.5.0
+  rive: ^0.7.1
+  animated_text_kit: ^4.2.2
+  animate_do: ^3.0.2
+
 
 dev_dependencies:
   flutter_test:
